--- a/pet/src/main/resources/application.yml
+++ b/pet/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
 
 ---
 
@@ -14,7 +14,7 @@ spring:
     stream:
       kafka:
         binder:
-          brokers: localhost:29092
+          brokers: localhost:9092
         streams:
           binder:
             configuration:
@@ -26,10 +26,10 @@ spring:
       bindings:
         event-in:
           group: pet
-          destination: petstore
+          destination: petshop
           contentType: application/json
         event-out:
-          destination: petstore
+          destination: petshop
           contentType: application/json
 
 logging:
@@ -37,10 +37,10 @@ logging:
     org.hibernate.type: trace
     org.springframework.cloud: debug
 
----
 
 server:
-  port: 8080
+  port: 8081
+---
 
 spring:
   profiles: docker
@@ -60,8 +60,10 @@ spring:
       bindings:
         event-in:
           group: pet
-          destination: petstore
+          destination: petshop
           contentType: application/json
         event-out:
-          destination: petstore
+          destination: petshop
           contentType: application/json
+
+
